--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artcards",
+  "name": "Bu Ganesh",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -7,13 +7,17 @@
   "dependencies": {
     "@cloudinary/react": "1.9.0",
     "@cloudinary/url-gen": "1.8.7",
+    "classnames": "^2.3.2",
+    "gsap": "^3.12.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel": "1.2.0",
+    "use-sound": "^4.0.1",
     "uuid": "3.3.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
