--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "classnames": "^2.3.2",
     "gsap": "^3.12.2",
     "react": "16.8.0",
+    "react-carousel-slider": "^2.0.13",
     "react-dom": "16.8.0",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spring-3d-carousel": "1.2.0",
+    "slick-carousel": "^1.8.1",
     "use-sound": "^4.0.1",
     "uuid": "3.3.2"
   },
