--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@cloudinary/url-gen": "1.8.7",
     "classnames": "^2.3.2",
     "gsap": "^3.12.2",
+    "pure-react-carousel": "^1.30.1",
     "react": "16.8.0",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "16.8.0",
