--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-carousel-slider": "^2.0.13",
     "react-dom": "16.8.0",
     "react-icons": "^4.10.1",
+    "react-modal-image": "^2.6.0",
     "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
